# prompt-guard-sdk

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  llmsec_lite.config.example.json  pyproject.toml  test_all_scanners.py
examples/: basic_usage.py  fastapi_integration.py  pii_only.py
nadiai_prompt_guard/: __init__.py  scanner.py
src/llmsec_lite/: __init__.py  exceptions.py  guard.py  router.py
src/llmsec_lite/models/: __init__.py  downloader.py  llm_client.py  onnx_runtime.py
src/llmsec_lite/patterns/: __init__.py  code_injection.json  pii.json  secrets.json
src/llmsec_lite/scanners/: __init__.py  base.py  code_injection.py  hallucination.py  injection.py  pii.py  secrets.py  toxicity.py
src/llmsec_lite/schemas/: __init__.py  config.py  results.py
src/llmsec_lite/utils/: __init__.py  logger.py  redactor.py
tests/: __init__.py  conftest.py  test_code_injection.py  test_guard.py  test_injection.py  test_pii.py  test_scanner.py  test_secrets.py
